<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>21</maven.compiler.target>
  	<maven.compiler.source>21</maven.compiler.source>
	</properties>

	<groupId>org.openlca</groupId>
	<artifactId>olca-sd</artifactId>
	<version>0.0.2</version>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>System dynamics modeling library for openLCA.</description>
	<url>https://github.com/GreenDelta/olca-sd</url>

	<licenses>
		<license>
			<name>Mozilla Public License, Version 2.0</name>
			<url>https://www.mozilla.org/en-US/MPL/2.0/</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>msrocka</id>
			<name>Michael Srocka</name>
			<email>srocka@greendelta.com</email>
			<organization>GreenDelta</organization>
			<organizationUrl>http://www.greendelta.com</organizationUrl>
			<roles>
				<role>owner</role>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/GreenDelta/olca-sd.git</connection>
		<developerConnection>scm:git:git://github.com/GreenDelta/olca-sd.git</developerConnection>
		<url>https://github.com/GreenDelta/olca-sd</url>
	</scm>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/GreenDelta/olca-sd/issues</url>
	</issueManagement>

	<dependencies>

		<dependency>
			<groupId>org.openlca</groupId>
			<artifactId>olca-commons</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.4</version>
		</dependency>

		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>4.0.6</version>
		</dependency>

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.13.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.13.2</version>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/generated-sources/org/openlca/sd/eqn/generated</outputDirectory>
							<visitor>true</visitor>
							<listener>true</listener>
							<arguments>
								<argument>-package</argument>
								<argument>org.openlca.sd.eqn.generated</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>deployment</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
          	<groupId>org.sonatype.central</groupId>
          	<artifactId>central-publishing-maven-plugin</artifactId>
          	<version>0.9.0</version>
          	<extensions>true</extensions>
          	<configuration>
            	<publishingServerId>central</publishingServerId>
          	</configuration>
        	</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
